@@ -1,3 +1,5 @@
+# Force rails into production mode
+ENV['RAILS_ENV'] ||= 'production'
 
 # Load the Rails application.
 require File.expand_path('../application', __FILE__)
